--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                     <li><a href="#">Nav 4</a></li>
                 </ul>
             </div>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
             <div class="dark-toogle text-right">
                 <a id="dark-mode-toggle" href="#"><i class="fas fa-adjust"></i></a>
             </div>
