--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     quisquam delectus libero assumenda amet distinctio ducimus id illo, corrupti, sequi, iusto ab
                     adipisci. Ea, autem?
                 </p>
-                <img src="https://images.pexels.com/photos/5842620/pexels-photo-5842620.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+                <img
+                    src="https://images.pexels.com/photos/5842620/pexels-photo-5842620.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum molestiae labore totam quod eos
                     doloremque, ad blanditiis quam perferendis enim magnam nihil omnis, iusto quia corrupti architecto?
@@ -102,6 +103,13 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container full">
+        <p>
+            © Mattias Lager 2021
+        </p>
+        </div>
+    </footer>
 </body>
 
 </html>
